# ai-dispatch

./: .aid-lock  .aid-verify-deps-state  .droid-exec-help.txt  .droid-improvement-spec.md  .gitignore  CHANGELOG.md  CLAUDE.md  COMPETITION_README.md  Cargo.toml  Containerfile  DESIGN.md  README.md  build.rs  claude-prompt.md  evermemos-batch.toml  prompt-hardening.toml  result-t-0643.md  result-t-3009.md  result-t-d9ab.md  result.md  v13-features.toml  v14-features.toml  v15-fixes.toml  v16-quality.toml  v17-ux.toml  v20-capabilities.toml  v21-robustness.toml  v25-polish.toml  v26-efficiency-opencode.toml  v26-efficiency.toml  v27-native-flags.toml  v28-resilience.toml  v29-retry.toml  v29-tasks.toml  v52-features.toml  v53-hooks-compaction.toml  v54-fixes-and-export.toml  v54-memory.toml  v55-tree-summary.toml  v56-findings.toml  (+14 more)
.aid/: project.toml  state.toml
.aid/knowledge/: KNOWLEDGE.md  agent-system.md  architecture.md  build-and-release.md  coding-conventions.md  common-pitfalls.md  lifecycle-cross-audit-plan.md  lifecycle-phase-runner-audit.md  lifecycle-phase1-audit.md  lifecycle-phase2-audit.md  lifecycle-phase3-audit.md  lifecycle-postprocess-phase-audit.md  lifecycle-refactor-design.md  lifecycle-refactor-roadmap.md  lifecycle-worktree-snapshot-audit.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: check-changelog.sh
.github/workflows/: ci.yml  publish.yml  release.yml
default-skills/: code-scout.md  debugger.md  implementer.md  researcher.md  test-writer.md
default-templates/: bug-fix.md  feature.md  refactor.md
docs/: aid-improvements-2026-05-20.md  byok-pattern.md  gitbutler.md  investigation-codex-stall.md  roadmap.md  ux-debt.md
docs/design/: mimocode-agent-integration.md  reply-unstick-spec.md
docs/research/: 2026-05-20-code-survey-codex.md
examples/byok/: mimo.toml
plugins/codebuff/: README.md  aid-codebuff.mjs  package-lock.json  package.json
scripts/: aid-byok-apply.sh  aid-byok-apply.test.sh  aid-byok-lib.sh  aid-byok-probe.sh  aid-byok-remove.sh  release-orphan-check-test.sh  release.sh  session-preflight.sh
src/: agent_config.rs  aic.rs  background.rs  background_binary_tests.rs  background_foreground_tests.rs  background_orphan.rs  background_process.rs  background_spec.rs  background_waiting.rs  batch.rs  batch_interpolate.rs  batch_legacy_fields.rs  batch_serde.rs  board.rs  claudemd.rs  cli.rs  cli_actions.rs  cmd_dispatch.rs  commit.rs  compaction.rs  config.rs  container.rs  context.rs  cost.rs  credential_pool.rs  evermemos.rs  explore.rs  gitbutler.rs  hooks.rs  idle_timeout.rs  input_signal.rs  main.rs  memory.rs  model_health.rs  notify.rs  output.rs  paths.rs  process_group.rs  process_guard.rs  project.rs  (+43 more)
src/agent/: antigravity.rs  antigravity_tests.rs  classifier.rs  claude.rs  claude_events.rs  claude_tests.rs  codebuff.rs  codex.rs  copilot.rs  copilot_tests.rs  cursor.rs  cursor_binary_tests.rs  custom.rs  droid.rs  env.rs  gemini.rs  gemini_support.rs  gemini_tests.rs  gemini_v036_tests.rs  kilo.rs  mimocode.rs  mod.rs  ob1.rs  opencode.rs  opencode_overlay.rs  opencode_tests.rs  oz.rs  qwen.rs  qwen_tests.rs  registry.rs  selection.rs  selection_claude_tests.rs  selection_scoring.rs  tests.rs  truncate.rs
src/background/: tests.rs
src/batch/: legacy_field_tests.rs  max_concurrent_tests.rs  schema.rs  tests.rs  validate.rs  warnings.rs
src/board/: detail.rs  tests.rs
src/cli/: command_args_a.rs  command_args_b.rs  command_args_c.rs  doctor_tests.rs  export_tests.rs  extras.rs  mod.rs  run_audit_flag_tests.rs  sub_enums.rs  tests.rs
src/cmd/: agent.rs  (+152 more)
target-rate-limit/: .rustc_info.json
tests/: auto_selection_e2e.rs  batch_pending_dispatch_e2e.rs  board_json_e2e.rs  e2e_test.rs  init_e2e.rs  template_e2e.rs
website/: package-lock.json  package.json  wrangler.toml
website-store/: package-lock.json  package.json  wrangler.toml
(+713 files in other folders)
