[package]
name = "ai-dispatch"
version = "4.5.0"
edition = "2024"
description = "Multi-AI CLI team orchestrator"
license = "MIT"
repository = "https://github.com/sunoj/ai-dispatch"
keywords = ["ai", "cli", "orchestrator", "multi-agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "aid"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
portable-pty = { version = "0.8", default-features = false }

[dev-dependencies]
tempfile = "3"
libc = "0.2"
