[package]
name = "ai-dispatch"
version = "8.20.7"
edition = "2024"
description = "Multi-AI CLI team orchestrator"
license = "MIT"
repository = "https://github.com/agent-tools-org/ai-dispatch"
keywords = ["ai", "cli", "orchestrator", "multi-agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "aid"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time"] }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
portable-pty = { version = "0.8", default-features = false }
axum = { version = "0.8", optional = true, default-features = false, features = ["http1", "json", "query", "tokio"] }
tower-http = { version = "0.6", optional = true, default-features = false, features = ["cors"] }
rust-embed = { version = "8", optional = true }
futures = { version = "0.3", optional = true, default-features = false, features = ["std"] }

[features]
default = []
web = ["axum", "tower-http", "rust-embed", "futures", "tokio/signal"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
libc = "0.2"
